--- a/Frontend/Agronomo/Asistente_IA/chat_ia.html
+++ b/Frontend/Agronomo/Asistente_IA/chat_ia.html
@@ -2,187 +2,183 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title></title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #FBF9F4;
-      font-family: 'Roboto', sans-serif;
-    }
-
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background-color: #344E41;
-      color: white;
-      padding: 20px 40px;
-    }
-
-    header h1 {
-      font-family: 'IBM Plex Mono', monospace;
-      font-size: 36px;
-    }
-
-    .chat-container {
-      display: flex;
-      flex-direction: column;
-      width: 80%;
-      max-width: 1000px;
-      margin: 40px auto;
-      background-color: white;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      height: 600px;
-    }
-
-    #chatBox {
-      flex: 1;
-      overflow-y: auto;
-      padding-bottom: 20px;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .mensaje {
-      margin: 10px 0;
-      padding: 10px 15px;
-      border-radius: 12px;
-      max-width: 70%;
-      font-size: 15px;
-      line-height: 22px;
-    }
-
-    .usuario {
-      background-color: #A3B18A;
-      align-self: flex-end;
-      text-align: right;
-    }
-
-    .ia {
-      background-color: #E6E6E6;
-      align-self: flex-start;
-      text-align: left;
-    }
-
-    .input-area {
-      display: flex;
-      margin-top: 20px;
-    }
-
-    #mensajeInput {
-      flex: 1;
-      padding: 12px;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    #enviarBtn {
-      background-color: #A3B18A;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      padding: 12px 20px;
-      margin-left: 10px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    .botones-funcionales {
-      margin-top: 20px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-
-    .boton-funcional {
-      background-color: white;
-      border: 1px solid #A3B18A;
-      border-radius: 30px;
-      padding: 10px 20px;
-      cursor: pointer;
-      font-size: 14px;
-      color: #000000;
-    }
-
-  </style>
+  <title>EcoSmart · Chat IA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Enlazamos el CSS -->
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-  <header>
-    <div style="display: flex; align-items: center;">
-    <img src="imagenes/plantacion (6).png" alt="Logo EcoSmart" 
-    style="width: 76px; height: 76px; margin-right: 15px;" />
-</div>
+  <div class="app-container">
+    <!-- ============================================
+         SIDEBAR IZQUIERDO
+    ============================================ -->
+    <aside class="sidebar">
+      <div class="logo-titulo">EcoSmart</div>
+      <button id="btnNuevoChat">Nuevo Chat</button>
+      <ul id="listaChats"></ul>
+      <div class="sidebar-footer">
+        <img src="imagenes/avatar.png" alt="Avatar Agrónomo" id="avatarImagen" />
+        <!-- Ya tenemos id para el span -->
+        <span id="nombre-usuario-agronomo" class="nombre-usuario">Agrónomo</span>
+      </div>
+    </aside>
 
-<div style="display: flex; align-items: center; gap: 10px;">
+    <!-- ============================================
+         ÁREA PRINCIPAL (derecha)
+    ============================================ -->
+    <main class="main-contenido">
+      <!-- Enlace “Atrás” -->
+      <div class="enlace-atras">
+        <a href="/Frontend/Agronomo/Inicio/inicio_agronomo.html">Atrás</a>
+      </div>
 
-<!--Navegacion paginas-->
-  <a href="/Frontend/Agronomo/Inicio/inicio_agronomo.html"
-     style="color: white; font-size: 20px; font-family: 'IBM Plex Mono', monospace; font-weight: 700; text-decoration: underline;">
-    Atrás
-  </a>
-<!---------------------->
+      <div class="contenido-central">
+        <div class="icono-plantita">
+          <img src="imagenes/plantacion (6).png" alt="Logo EcoSmart" />
+        </div>
 
-  <div style="width: 223px; height: 72px; background: #588157; border-radius: 28px; display: flex; align-items: center; padding-left: 15px;">
-    <img src="imagenes/avatar.png" alt="Avatar" style="width: 37px; height: 37px;" />
-    <div id="nombre-usuario-agronomo" style="color: white; font-size: 20px; text-align: center; justify-content: center; font-family: 'IBM Plex Mono', monospace; font-weight: 700; margin-left: 10px;">Agrónomo</div>
-    <script>
-    const nombre = localStorage.getItem("nombreUsuario");
-    if (nombre) {
-      document.getElementById("nombre-usuario-agronomo").textContent = nombre;
-    }
-    </script>
+        <h2 class="titulo-principal">Hola, soy EcoSmart</h2>
+        <p class="subtitulo">¿Cómo puedo ayudarte hoy?</p>
 
-  <!-- 
-  Menú desplegable oculto 
-  -->
-  <div id="menuOpciones" style="display: none; width: 203px; position: absolute; top: 120px; left: 1250px; background: #344E41; border-radius: 10px; padding: 10px;">
-    <a href="/Frontend/Inicio_de_sesion/Inicio/inicio.html"
-      style="display: flex; justify-content: center; color: white; text-decoration: none; font-family: IBM Plex Mono; font-weight: 550; font-size: 18px;">
-      Cerrar sesión
-    </a>
+        <!-- ============================
+             SELECT DE PARCELAS + SENSORES
+        ============================ -->
+        <div class="select-parcela-contenedor">
+          <select id="parcelaSelect">
+            <option value="">-- Selecciona una parcela --</option>
+            <!-- Se llenará dinámicamente vía JS -->
+          </select>
+        </div>
+
+        <!-- NUEVO: SELECT DE SENSORES (inicialmente deshabilitado) -->
+        <div class="select-parcela-contenedor">
+          <select id="sensorSelect" disabled>
+            <option value="">-- Selecciona un sensor --</option>
+            <!-- Se llenará dinámicamente según parcela -->
+          </select>
+        </div>
+
+        <!-- NUEVO: Botón para pedir recomendación según sensor -->
+        <div style="margin-bottom: 12px; text-align: center;">
+          <button id="btnRecomendarSensor" disabled>Obtener recomendación</button>
+        </div>
+
+        <!-- Salto de línea antes del área de chat -->
+        <div style="height: 16px;"></div>
+
+        <!-- ============================================
+             CHAT-BOX (área de mensajes, sin cambios)
+        ============================================ -->
+        <div id="chatBox" class="chat-box">
+          <!--
+            Cada mensaje se inyecta con JavaScript:
+            - Usuario: <div class="mensaje mensaje-usuario">…</div>
+            - IA:      <div class="mensaje mensaje-ia">…</div>
+          -->
+        </div>
+
+        <!-- Input + Botón Enviar (chat) -->
+        <div class="input-chat-contenedor">
+          <input
+            type="text"
+            id="mensajeInput"
+            class="input-chat"
+            placeholder="Escribe tu mensaje aquí..."
+          />
+          <button id="btnEnviar" class="btn-enviar">↑</button>
+        </div>
+
+        <!-- Botones funcionales (sin cambios) -->
+        <div class="botones-funcionales">
+          <button class="btn-funcional" data-accion="diagnostico">
+            Diagnóstico de enfermedades
+          </button>
+          <button class="btn-funcional" data-accion="interpretacion">
+            Mejor epoca para siembra
+          </button>
+          <button class="btn-funcional" data-accion="optimizacion">
+            Optimización de riego
+          </button>
+          <button class="btn-funcional" data-accion="planificacion">
+            Planificación de cultivos
+          </button>
+        </div>
+
+        <!-- NUEVO: contenedor para mostrar la recomendación de IA -->
+        <div
+          id="recomendacionOutput"
+          style="margin-top: 12px; width: 100%; max-width: 600px; word-break: break-word;"
+        >
+          <!-- Aquí se insertará la recomendación basada en sensor -->
+        </div>
+      </div>
+    </main>
   </div>
 
+  <!-- ============================================
+       Menú desplegable oculto para Cerrar sesión
+  ============================================ -->
+  <div
+    id="menuOpciones"
+    style="
+      display: none;
+      width: 203px;
+      position: absolute;
+      top: 830px;
+      left: 17px;
+      background: #588157;
+      border-radius: 10px;
+      padding: 10px;
+    "
+  >
+    <a
+      href="/Frontend/Inicio_de_sesion/Inicio/inicio.html"
+      style="
+        display: flex;
+        justify-content: center;
+        color: white;
+        text-decoration: none;
+        font-family: IBM Plex Mono;
+        font-weight: 550;
+        font-size: 18px;
+      "
+      >Cerrar sesión</a
+    >
+  </div>
+
+  <!-- ============================================
+       Enlazamos tu JavaScript (lógica del chat + sensores)
+  ============================================ -->
+  <script src="asistente.js"></script>
+
+  <!-- Script para cargar el nombre de usuario desde localStorage -->
   <script>
-    // Mostrar/ocultar menú al hacer clic en el avatar o nombre
-    const avatar = document.querySelector('img[src="imagenes/avatar.png"]');
-    const nombreUsuario = document.getElementById("nombre-usuario-agronomo");
-    const menu = document.getElementById("menuOpciones");
-
-    function toggleMenu() {
-      menu.style.display = (menu.style.display === "none" || menu.style.display === "") ? "block" : "none";
-    }
-
-    avatar.addEventListener("click", toggleMenu);
-    nombreUsuario.addEventListener("click", toggleMenu);
+    document.addEventListener("DOMContentLoaded", () => {
+      const nombre = localStorage.getItem("nombreUsuario");
+      if (nombre) {
+        document.getElementById("nombre-usuario-agronomo").textContent = nombre;
+      }
+    });
   </script>
 
-  </div>
-</div>
+  <!-- Script para mostrar/ocultar menú de Cerrar sesión -->
+  <script>
+    // Esperamos al DOM para asegurar que avatar y nombre ya existen
+    document.addEventListener("DOMContentLoaded", () => {
+      const avatar = document.getElementById("avatarImagen");
+      const nombreUsuario = document.getElementById("nombre-usuario-agronomo");
+      const menu = document.getElementById("menuOpciones");
 
+      function toggleMenu() {
+        menu.style.display =
+          menu.style.display === "none" || menu.style.display === ""
+            ? "block"
+            : "none";
+      }
 
-  </header>
-
-  <main class="chat-container">
-    <div id="chatBox"></div>
-
-    <div class="input-area">
-      <input type="text" id="mensajeInput" placeholder="Escribe tu mensaje aquí..." />
-      <button id="enviarBtn">Enviar</button>
-    </div>
-
-    <div class="botones-funcionales">
-      <button class="boton-funcional" id="nuevoChatBtn">Nuevo Chat</button>
-      <button class="boton-funcional" id="diagnosticoBtn">Diagnóstico de enfermedades</button>
-      <button class="boton-funcional" id="interpretacionBtn">Interpretación de datos</button>
-      <button class="boton-funcional" id="optimizacionBtn">Optimización de riego</button>
-      <button class="boton-funcional" id="planificacionBtn">Planificación de cultivos</button>
-    </div>
-  </main>
-
-  <script src="asistente.js"></script>
+      avatar.addEventListener("click", toggleMenu);
+      nombreUsuario.addEventListener("click", toggleMenu);
+    });
+  </script>
 </body>
 </html>
